# yt-transcript-extractor

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: ci-check.sh  release-check.sh
youtube_transcript/: __init__.py
